--- a/InformativaProyectoCancer/index.css
+++ b/InformativaProyectoCancer/index.css
@@ -3,7 +3,7 @@
   border: 0;
   box-sizing: border-box;
   font-family: 'Kanit', sans-serif;
-  background-color: #fff;
+  background-color: #f1f0f0;
 }
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
 ::-webkit-scrollbar {
