--- a/InformativaProyectoCancer/index.css
+++ b/InformativaProyectoCancer/index.css
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+
+
 *{
   margin: 0;
   border: 0;
   box-sizing: border-box;
   font-family: 'Kanit', sans-serif;
-  background-color: #f1f0f0;
+  background-color: #ffffff;
 }
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+
+
 ::-webkit-scrollbar {
   width: 9px;
 }
@@ -15,4 +19,9 @@
 ::-webkit-scrollbar-thumb {
   background: #ffffff93;
   border-radius: 2em;
+}
+
+.typewriter::first-letter {
+  color: blue;
+  font-size:1.5em;
 }
