--- a/SistemaCancer/frontcancer/src/index.css
+++ b/SistemaCancer/frontcancer/src/index.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
 *{
+  font-family: 'Kanit', sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+body{
+  background-color: rgb(48, 65, 75);
+
+}
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 
 }
 ::-webkit-scrollbar-track {
@@ -12,6 +18,6 @@
 
 }
 ::-webkit-scrollbar-thumb {
-  background: #002fff63;
+  background: #11268363;
   border-radius: 3em;
 }
